# archon

./: .copilot-instructions.md  .env.example  .gitignore  .mcp.json  ARCHON_OVERHAUL_PROMPT.md  AUTONOMOUS_BUILD.md  COMPLETION_SUMMARY.txt  CURRENT_STATE.md  FINAL_REPORT.md  FIXES_SUMMARY.txt  INSTRUCTIONS.md  KICKOFF_PROMPT.md  LICENSE  MAIN_PROMPT.md  MASTER_BUILD_PROMPT.md  META_PROMPT.md  Makefile  ORCHESTRATION_PLAN.md  ORCHESTRATOR_CONTEXT.md  P0-DELTA.md  PHASE_0_3_EXECUTION_REPORT.md  PHASE_0_9_EXECUTION_REPORT.md  README.md  REMEDIATION_REPORT.md  REMEDIATION_REPORT_R2.md  RE_EVALUATION_CYCLE_REPORT.md  RE_EVALUATION_REPORT.md  ROADMAP.md  SWARM_FIXUP_PLAN.md  SWARM_PLAN.md  SWARM_PLAN_v1.md  TEMPORAL_HARDENING_PROOF_LADDER.md  VALIDATION_REPORT.md  WIZARD_TEMPLATES_EXAMPLES.md  docker-compose.test.yml  docker-compose.yml  env.example  pyrightconfig.json
.sdd/: STATE.md  (+1 more)
gateway/: Dockerfile  pyproject.toml  requirements.txt
gateway/app/: __init__.py  config.py  main.py
gateway/app/auth/: __init__.py  middleware.py  models.py
gateway/app/guardrails/: __init__.py  middleware.py
gateway/app/plugins/: __init__.py  loader.py  models.py
gateway/app/routes/: __init__.py  capabilities.py  health.py  invoke.py  plugins.py
gateway/app/tools/: __init__.py  builtin_ai.py  container.py  dispatch.py  forwarder.py
gateway/app/workflows/: qa_trigger.py
gateway/plugins/: _example.yaml  finance-revenue-mcp.yaml
gateway/tests/: conftest.py  test_auth_middleware.py  test_capabilities.py  test_dispatch.py  test_guardrails.py  test_invoke.py  test_plugin_loader.py
(+1234 files in other folders)
